<resources>
    <string name="app_name">PC_House</string>
    <string name="add">Add to cart</string>
    <string name="checkout">checkout</string>
    <string name="search">search</string>
    <string name="qty">Please select the Qty:</string>
    <string name="msg">Please select the Qty</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Cart">Cart</string>
    <string name="Edit">Edit</string>
    <string name="Remove">Remove</string>
    <string name="home">Home</string>
    <string name="cat">Categories</string>
    <string name="profile">Profile</string>
    <string name="website">www.metropchouse.com</string>
    <string name="title">METRO PC HOUSE</string>
    <string name="search_msg">Search Here....</string>
    <string name="reg_name">Enter Your Name..</string>
    <string name="reg_mail">Enter Your E-mail Address..</string>
    <string name="reg_phone">Enter Your Mobile No</string>
    <string name="Reg_password">Enter A Password..</string>
    <string name="Reg_con">Confrim Your Password</string>
    <string name="sign_up">Sign up</string>
    <string name="regHeader">Register</string>
    <string name="sign_in">Sign IN</string>
    <string name="addNewAddress">Add New Address</string>
    <string name="country">Country or Region</string>
    <string name="Address">Street Address</string>
    <string name="city">City</string>
    <string name="province">State/Province</string>
    <string name="postcode">Postal Code</string>
    <string name="number">Phone Number</string>
    <string name="confiirmAdd">Confirm</string>
    <string name="addNew">Add New Address</string>
    <string name="EditAdd">Edit Address Details</string>
    <string name="addPay">Add New Card</string>
    <string name="EditPay">Edit Card Details</string>
    <string name="description1">Add Product Details</string>
    <string name="show">Show</string>
    <string name="custName">Cardholder Name</string>
    <string name="cardNo">Card Number</string>
    <string name="cvv">(Security code)CVV</string>
    <string name="expireDate">MM/YY</string>
    <string name="btnPayment">Confirm</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cardDes">Enter your 16-19 digit card number</string>
    <string name="register">Register</string>
    <string name="userName">Username</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="cPassword">Confirm Password</string>
    <string name="addNewcard">Add New Card</string>
    <string name="skip">Skip</string>
    <string name="total">Total Price</string>
    <string name="Log_titile">Login Here..</string>
    <string name="allgoin">Already have an Account ? Login</string>
    <string name="jnow">Join Now</string>
    <string name="logHeader">Login</string>
    <string name="log_pass">Enter Your Password</string>
    <string name="addNewOrder">AddOrder</string>
    <string name="OrderAgain">Order Again</string>
    <string name="MyOrders">My Orders</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="paymentdetails">payment details</string>
    <string name="PaymentHistory">Payment History</string>
    <string name="AddressDetails">Address Details</string>
    <string name="Registerasaseller">Register as a seller</string>
    <string name="Productname">Product Name</string>
    <string name="ProductCategory">Product Category</string>
    <string name="ProuctDescription">Product Description</string>
    <string name="Price">Price</string>
    <string name="addNewProduct">Add new Product</string>
    <string name="EditProduct">Edit Product Details</string>
    <string name="description_text">Description</string>
    <string name="searchr">Search Result</string>
    <string name="EnterCustomerName">EnterCustomerName</string>
    <string name="EnterCustName">Enter Customer Name</string>
    <string name="EnterCustID">Enter Customer ID</string>
    <string name="EnterCustomerEmail">Enter Customer Email</string>
    <string name="EnterCustomerPhone">Enter Customer Phone Number</string>
    <string name="EditCustomerDetails">Edit Customer Details</string>
    <string name="ViewMyProducts">View My Products</string>
    <string name="ProuctURL">ProductURL</string>
</resources>