<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditAddressDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description"
            android:layout_width="408dp"
            android:layout_height="59dp"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.213" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editcountry"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:background="@drawable/custome_input"
        android:hint="@string/country"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editstreet"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/Address"
        android:background="@drawable/custome_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editcity"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/city"
        android:background="@drawable/custome_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editprovince"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/province"
        android:background="@drawable/custome_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editcode"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/postcode"
        android:background="@drawable/custome_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editphone"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/number"
        android:background="@drawable/custome_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editconfirmAddress"
            android:layout_width="345dp"
            android:layout_height="51dp"
            android:background="@drawable/custome_button"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.407" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>