<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditPaymentDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PayHeading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/EditPay"
            android:textColor="#708E0B"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editcardNo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/custome_input"
        android:ems="10"
        android:hint="@string/cardNo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_baseline_credit_card_24"
        android:drawablePadding="12dp"
        android:inputType="textPersonName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="38dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="363dp"
            android:layout_height="33dp"
            android:text="@string/cardDes"
            android:textColor="#FF0000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editcustName"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/custName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custome_input"
        android:drawableStart="@drawable/cardholder"
        android:drawablePadding="12dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editcvv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:background="@drawable/custome_input"
        android:hint="@string/cvv"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="12dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/editexpireDate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:background="@drawable/custome_input"
        android:hint="@string/expireDate"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="12dp"
        android:inputType="date" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/saveconfirmAddPayment"
            android:layout_width="345dp"
            android:layout_height="51dp"
            android:background="@drawable/custome_button"
            android:textColor="#FFFFFF"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.461" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>