<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProductDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description2"
            android:layout_width="408dp"
            android:layout_height="59dp"
            android:text="@string/EditProduct"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.213" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editproductname"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:background="@drawable/custome_input"
        android:hint="@string/Productname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editcategory"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/ProductCategory"
        android:background="@drawable/custome_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editdescription"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/ProuctDescription"
        android:background="@drawable/custome_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editprice"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/Price"
        android:background="@drawable/custome_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editconfirmProduct"
            android:layout_width="345dp"
            android:layout_height="51dp"
            android:background="@drawable/custome_button"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.407" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>